e2e/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10g
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /kobold/events
        backend:
          service:
            name: kobold-webhook
            port:
              name: webhook
      - pathType: Prefix
        path: /kobold/
        backend:
          service:
            name: kobold-api
            port:
              name: api
      - pathType: Prefix
        path: /v2/
        backend:
          service:
            name: distribution
            port:
              number: 5000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gitea
            port:
              number: 3000
